-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
lfsck readonly mode reported 262,221 of the following type of errors:
00100000:10000000:25.0:1608214932.724228:0:82239:0:(lfsck_layout.c:351:lfsck_layout_verify_header_v1v3()) Unsupported LOV EA magic 198708176 for the file [0x200095ec5:0x13886:0x0]
The file uses SEL:
walleye-p6:~ # lfs getstripe /lus/kjcf04/disk/ostest.vers/alsorun.20201209124303.2692.walleye-p6/CL_IOR_dom_sel_8s_dirio_wr_4iter_n32x4_8m.1.tK9YyC.1607539408/CL_IOR_dom_sel_8s_dirio_wr_4iter_n32x4_8m/30/IORfile_8m.00000030
/lus/kjcf04/disk/ostest.vers/alsorun.20201209124303.2692.walleye-p6/CL_IOR_dom_sel_8s_dirio_wr_4iter_n32x4_8m.1.tK9YyC.1607539408/CL_IOR_dom_sel_8s_dirio_wr_4iter_n32x4_8m/30/IORfile_8m.00000030
lcm_layout_gen: 11
lcm_mirror_count: 1
lcm_entry_count: 4
lcme_id: 1
lcme_mirror_id: 0
lcme_flags: init
lcme_extent.e_start: 0
lcme_extent.e_end: 524288
lmm_stripe_count: 0
lmm_stripe_size: 524288
lmm_pattern: mdt
lmm_layout_gen: 0
lmm_stripe_offset: 0
lmm_pool: disk
lcme_id: 2
lcme_mirror_id: 0
lcme_flags: init
lcme_extent.e_start: 524288
lcme_extent.e_end: 536870912
lmm_stripe_count: 2
lmm_stripe_size: 524288
lmm_pattern: raid0
lmm_layout_gen: 0
lmm_stripe_offset: 3
lmm_pool: disk
lmm_objects:
- 0: { l_ost_idx: 3, l_fid: [0x100030000:0xb6726877:0x0] }
- 1: { l_ost_idx: 0, l_fid: [0x100000000:0xbcbf7a77:0x0] }
lcme_id: 4
lcme_mirror_id: 0
lcme_flags: init
lcme_extent.e_start: 536870912
lcme_extent.e_end: 1073741824
lmm_stripe_count: 2
lmm_stripe_size: 524288
lmm_pattern: raid0
lmm_layout_gen: 0
lmm_stripe_offset: 2
lmm_pool: disk
lmm_objects:
- 0: { l_ost_idx: 2, l_fid: [0x100020000:0xb65a82bf:0x0] }
- 1: { l_ost_idx: 1, l_fid: [0x100010000:0xbcc07258:0x0] }
lcme_id: 5
lcme_mirror_id: 0
lcme_flags: extension
lcme_extent.e_start: 1073741824
lcme_extent.e_end: EOF
lmm_stripe_count: 0
lmm_extension_size: 268435456
lmm_pattern: raid0
lmm_layout_gen: 0
lmm_stripe_offset: -1
lmm_pool: disk